# Euro-Drive-Systems-Telemetry

./: LICENSE  README.md  euroo_event.example.json  pyproject.toml
euroo_drive_telemetry/: __init__.py  ai_engineer.py  app.py  config.py  data.py  discord_support.py  export.py  fd_2026.py  link_ecu.py  report.py  sample_data.py  scoring.py  sensors.py  session.py  validation.py
tests/: test_scoring.py
